--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto:wght@700&display=swap"
-        rel="stylesheet" />
+        rel="stylesheet">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -27,7 +27,7 @@
                     <li class="nav-link"><a href="#" class="link">About</a></li>
                     <li class="nav-link"><a href="#" class="link">Contact</a></li>
                     <li class="nav-link">
-                        <a href="#"><img src="./Assets/logos/envelope.png" class="icon" alt="" /></a>
+                        <a href="#"><img src="./Assets/logos/emailicon.svg" class="icon" alt="" /></a>
                     </li>
                 </ul>
                 <div class="baricon">
@@ -42,14 +42,12 @@
     <section class="herosection">
         <div class="herosection_content">
             <div class="textcontainer">
-                <h1 class="h5">Hey There. I’m Life.</h1>
+                <h1 class="h5">Hey There. <br>I’m Life.</h1>
                 <h6 class="h6">I'm a Software Developer</h6>
                 <p class="hero-paragraph">
-                    I can help you build a product , feature or website Look
-                    through
-                    some of my work and experience! If you like what you see
-                    and have a
-                    project you need coded, don’t hesitate to contact me.
+                    I can help you build a product , feature or website. Look through some of my work and experience! If
+                    you like what you see and have a project you need coded,
+                    don’t hesitate to contact me.
                 </p>
             </div>
 
@@ -77,45 +75,55 @@
     <section class="works">
         <setion class="middlesection">
             <div class="middlesection-container">
-                <h2 class="middlesection_header_title">My Recent Works</h2>
-                <hr />
-                <img class="middlesection-image" src="./Assets/images/middlesectionimage.png" alt="" />
-            </div>
-            <h3 class="multiples-stories_header">Multi-Post Stories</h3>
-            <p class="multiples-stories_paragraph">
-                A daily selection of privately personalized reads; no
-                accounts or
-                sign-ups required. has been the industry's standard dummy
-                text ever
-                since the 1500s, when an unknown printer took a standard
-                dummy text.
-            </p>
-            <section class="button-flex">
-                <ul class="buttons">
-                    <li><button class="default-btn">CSS</button></li>
-                    <li><button class="default-btn">HTML</button></li>
-                    <li><button class="default-btn">Bootstrap</button></li>
-                    <li><button class="default-btn">Ruby</button></li>
-                </ul>
-            </section>
 
-            <div class="multiple-btn-container">
-                <button class="smallprimarybtn">See Project</button>
+                <div class="middlesection_header">
+                    <h2 class="middlesection_header_title">My Recent Works</h2>
+                    <div class="line_container">
+                        <hr>
+
+                    </div>
+                </div>
+
+                <div class="midddlesection_image_container">
+                    <img class="middlesection-image" src="./Assets/images/middlesectionimage.png" alt="" />
+                    <div class="middlesection_texts_container">
+                        <h3 class="multiples-stories_header">Multi-Post Stories</h3>
+                        <p class="multiples-stories_paragraph">A daily selection of privately personalized reads;
+                            no accounts or sign-ups required. has been the industry's standard dummy
+                            text ever since the 1500s, when an unknown printer took a standard dummy text.
+                        </p>
+                        <section class="button-flex">
+                            <ul class="buttons">
+
+                                <li><button class="default-btn">CSS</button></li>
+                                <li><button class="default-btn">HTML</button></li>
+                                <li><button class="default-btn">Bootstrap</button></li>
+                                <li><button class="default-btn">Ruby</button></li>
+                            </ul>
+                        </section>
+
+                        <div class="multiple-btn-container">
+                            <button class="smallprimarybtn">See Project</button>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
+
         </setion>
+
+
 
         <section class="card-section">
             <!-- PROFESSION ART PRINTING -->
             <section class="professional_art_printing-section">
                 <div class="professional_art_printing-section-items">
                     <div class="art_print_container">
-                        <h2 class="art_print_header">Profesional Art
-                            Printing Data</h2>
+                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
                         <p class="art_print_paragraph">
-                            A daily selection of privately personalized
-                            reads; no accounts
-                            or sign-ups required. Has been the industry's
-                            standard.
+                            A daily selection of privately personalized reads; no accounts or
+                            sign-ups required. Has been the industry's standard.
                         </p>
                         <ul class="art_print_btn_container">
                             <li><button class="transparent-btn">HTML</button></li>
@@ -130,13 +138,10 @@
 
                 <div class="professional_art_printing-section-items">
                     <div class="art_print_container">
-                        <h2 class="art_print_header">Profesional Art
-                            Printing Data</h2>
+                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
                         <p class="art_print_paragraph">
-                            A daily selection of privately personalized
-                            reads; no accounts
-                            or sign-ups required. Has been the industry's
-                            standard.
+                            A daily selection of privately personalized reads; no accounts or
+                            sign-ups required. Has been the industry's standard.
                         </p>
                         <ul class="art_print_btn_container">
                             <li><button class="transparent-btn">HTML</button></li>
@@ -151,13 +156,63 @@
 
                 <div class="professional_art_printing-section-items">
                     <div class="art_print_container">
-                        <h2 class="art_print_header">Profesional Art
-                            Printing Data</h2>
+                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
                         <p class="art_print_paragraph">
-                            A daily selection of privately personalized
-                            reads; no accounts
-                            or sign-ups required. Has been the industry's
-                            standard.
+                            A daily selection of privately personalized reads; no accounts or
+                            sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="art_print_btn_container">
+                            <li><button class="transparent-btn">HTML</button></li>
+                            <li><button class="transparent-btn">Bootstrap</button></li>
+                            <li><button class="transparent-btn">Ruby</button></li>
+                        </ul>
+                    </div>
+                    <div class="art-main-btn-container">
+                        <button class="primarybtn">See Project</button>
+                    </div>
+                </div>
+                <div class="professional_art_printing-section-items">
+                    <div class="art_print_container">
+                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                        <p class="art_print_paragraph">
+                            A daily selection of privately personalized reads; no accounts or
+                            sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="art_print_btn_container">
+                            <li><button class="transparent-btn">HTML</button></li>
+                            <li><button class="transparent-btn">Bootstrap</button></li>
+                            <li><button class="transparent-btn">Ruby</button></li>
+                        </ul>
+                    </div>
+                    <div class="art-main-btn-container">
+                        <button class="primarybtn">See Project</button>
+                    </div>
+                </div>
+
+                <div class="professional_art_printing-section-items">
+                    <div class="art_print_container">
+                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                        <p class="art_print_paragraph">
+                            A daily selection of privately personalized reads; no accounts or
+                            sign-ups required. Has been the industry's standard.
+                        </p>
+                        <ul class="art_print_btn_container">
+                            <li><button class="transparent-btn">HTML</button></li>
+                            <li><button class="transparent-btn">Bootstrap</button></li>
+                            <li><button class="transparent-btn">Ruby</button></li>
+                        </ul>
+                    </div>
+                    <div class="art-main-btn-container">
+                        <button class="primarybtn">See Project</button>
+                    </div>
+                </div>
+
+                <div class="professional_art_printing-section-items">
+                    <div class="art_print_container">
+                        <h2 class="art_print_header">Profesional Art Printing Data</h2>
+                        <p class="art_print_paragraph">
+                            A daily selection of privately personalized reads; no accounts or
+                            sign-ups required. Has been the industry's standard.
                         </p>
                         <ul class="art_print_btn_container">
                             <li><button class="transparent-btn">HTML</button></li>
@@ -180,12 +235,9 @@
             <div class="aboutme_container">
                 <h3 class="aboutme_header_text">About me</h3>
                 <p class="aboutme_paragraph">
-                    Hello I’m a software developer! I can help you build a
-                    product ,
-                    feature or website Look through some of my work and
-                    experience! If
-                    you like what you see and have a project you need coded,
-                    don’t
+                    Hello I’m a software developer! I can help you build a product ,
+                    feature or website Look through some of my work and experience! If
+                    you like what you see and have a project you need coded, don’t
                     hesitate to contact me.
                 </p>
 
@@ -241,71 +293,50 @@
     <!-- FORM SECTION -->
     <section class="form_section">
         <div class="form_section_container">
-            <p class="form_section_text">
-                I'm always <br />
-                interested in hearing about new projects, so if you'd like
-                to chat
-                please get in <br />
-                touch.
-            </p>
+            <div class="form_text_container">
+                <p class="form_section_text">
+                    I'm always
+                    interested in hearing about new projects, so if you'd like to chat
+                    please get in
+                    touch.
+                </p>
+            </div>
 
             <div class="form_container">
-                <form class="comment_form" action="https://formspree.io/f/xgebnddl" method="POST">
-                    <input class="textinput" name="name" id="fullname" type="text" placeholder="Full Name"
-                        maxlength="30" required />
-                    <br />
-                    <input class="textinput" id="email" type="email" name="email" placeholder="Email address"
-                        required /><br />
-                    <textarea class="textinput_textarea" name="message" id="user-message" cols="10" rows="5"
-                        placeholder="Write me something..." maxlength="500" required></textarea>
-                    <div class="form_btn_container">
-                        <button class="miniprimarybtn">Get in touch</button>
-                    </div>
+                <form class="comment_form">
+                    <input class="firstnameinput textinput" type="text" placeholder="First Name" /> <br />
+                    <input class="lastnameinput textinput" type="text" placeholder="Last Name" /> <br />
+                    <input class="emailinput textinput" type="email" placeholder="Email address" /><br />
+                    <textarea class="textinput_textarea" name="" id="" cols="10" rows="5"
+                        placeholder="Write me something..."></textarea>
                 </form>
+                <div class="form_btn_container">
+                    <button class="miniprimarybtn">Get in touch</button>
+                </div>
             </div>
         </div>
-    </section>
-    <!-- LIGHT SECTION -->
-    <!-- FORM SECTION -->
-    <section class="form_section">
-        <div class="form_section_container">
-            <p class="form_section_text">
-                I'm always <br />
-                interested in hearing about new projects, so if you'd like to chat
-                please get in <br />
-                touch.
-            </p>
 
-            <div class="form_container">
-                <form class="comment_form" action="https://formspree.io/f/xgebnddl" method="POST">
-                    <input class="textinput" name="name" type="text" placeholder="Full Name" maxlength="30" required />
-                    <input class="textinput" type="email" name="email" placeholder="Email address" required /><br />
-                    <textarea class="textinput_textarea" name="message" id="user-message" cols="10" rows="5"
-                        placeholder="Write me something..." maxlength="500" required></textarea>
-                    <div class="form_btn_container">
-                        <button class="miniprimarybtn">Get in touch</button>
-                    </div>
-                </form>
-            </div>
-            <div class="form_icon_container">
-                <ul class="footer_icon-container">
-                    <li class="icon_link">
-                        <a href="#"><img class="icon-image" src="./Assets/logos/githubicon.svg" alt="" /></a>
-                    </li>
-                    <li class="icon_link">
-                        <a href="#"><img class="icon-image" src="./Assets/logos/linkin.svg" alt="" /></a>
-                    </li>
-                    <li class="icon_link">
-                        <a href="#"><img class="icon-image" src="./Assets/logos/fingers.svg" alt="" /></a>
-                    </li>
-                    <li class="icon_link">
-                        <a href="#"><img class="icon-image" src="./Assets/logos/bird.svg" alt="" /></a>
-                    </li>
-                    <li class="icon_link">
-                        <a href="#"><img class="icon-image" src="./Assets/logos/letterM.svg" alt="" /></a>
-                    </li>
-                </ul>
-            </div>
+
+    </section>
+    <div class="form_icon_container">
+        <ul class="footer_icon-container">
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/githubicon.svg" alt="" /></a>
+            </li>
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/linkin.svg" alt="" /></a>
+            </li>
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/fingers.svg" alt="" /></a>
+            </li>
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/bird.svg" alt="" /></a>
+            </li>
+            <li class="icon_link">
+                <a href="#"><img class="icon-image" src="./Assets/logos/letterM.svg" alt="" /></a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
