--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-link"><a href="#" class="link">About</a></li>
                     <li class="nav-link"><a href="#" class="link">Contact</a></li>
                     <li class="nav-link">
-                        <a href="#"><img src="./Assets/logos/emailicon.svg" class="icon" alt="" /></a>
+                        <a href="#"><img src="./Assets/logos/emailicon.svg" class="icon" alt="icon" /></a>
                     </li>
                 </ul>
                 <div class="baricon">
@@ -53,19 +53,19 @@
 
             <ul class="icon-container">
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/Vector.png" alt="" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/Vector.png" alt="icon" /></a>
                 </li>
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/linkin.png" alt="" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/linkin.png" alt="icon" /></a>
                 </li>
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/fingers.png" alt="" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/fingers.png" alt="icon" /></a>
                 </li>
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/twitter.png" alt="" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/twitter.png" alt="icon" /></a>
                 </li>
                 <li class="icon_link">
-                    <a href="#"><img class="icon-image" src="./Assets/logos/letterM.png" alt="" /></a>
+                    <a href="#"><img class="icon-image" src="./Assets/logos/letterM.png" alt="icon" /></a>
                 </li>
             </ul>
         </div>
@@ -85,7 +85,8 @@
                 </div>
 
                 <div class="midddlesection_image_container">
-                    <img class="middlesection-image" src="./Assets/images/middlesectionimage.png" alt="" />
+                    <img class="middlesection-image" src="./Assets/images/middlesectionimage.png"
+                        alt="middle section image" />
                     <div class="middlesection_texts_container">
                         <h3 class="multiples-stories_header">Multi-Post Stories</h3>
                         <p class="multiples-stories_paragraph">A daily selection of privately personalized reads;
@@ -324,19 +325,19 @@
     <div class="form_icon_container">
         <ul class="footer_icon-container">
             <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/githubicon.svg" alt="" /></a>
+                <a href="#"><img class="icon-image" src="./Assets/logos/githubicon.svg" alt="icon" /></a>
             </li>
             <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/linkin.svg" alt="" /></a>
+                <a href="#"><img class="icon-image" src="./Assets/logos/linkin.svg" alt="icon" /></a>
             </li>
             <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/fingers.svg" alt="" /></a>
+                <a href="#"><img class="icon-image" src="./Assets/logos/fingers.svg" alt="icon" /></a>
             </li>
             <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/bird.svg" alt="" /></a>
+                <a href="#"><img class="icon-image" src="./Assets/logos/bird.svg" alt="icon" /></a>
             </li>
             <li class="icon_link">
-                <a href="#"><img class="icon-image" src="./Assets/logos/letterM.svg" alt="" /></a>
+                <a href="#"><img class="icon-image" src="./Assets/logos/letterM.svg" alt="icon" /></a>
             </li>
         </ul>
     </div>
