--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto:wght@700&display=swap"
         rel="stylesheet">
-    <title>Portfolio</title>
+    <title>LifeSoft</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -22,12 +22,12 @@
                 <span class="nav-logo">LifeSoft</span>
                 <ul class="nav-items">
                     <li class="nav-link">
-                        <a href="#" class="link active">Portfolio</a>
+                        <a href="#" class="link active">My CV</a>
                     </li>
-                    <li class="nav-link"><a href="#" class="link">About</a></li>
+                    <li class="nav-link"><a href="#" class="link">More_info</a></li>
                     <li class="nav-link"><a href="#" class="link">Contact</a></li>
                     <li class="nav-link">
-                        <a href="#"><img src="./Assets/logos/emailicon.svg" class="icon" alt="icon" /></a>
+                        <a href="#"><img src="./Assets/logos/emailicon.png" class="icon" alt="icon" /></a>
                     </li>
                 </ul>
                 <div class="baricon">
@@ -306,9 +306,12 @@
             <div class="form_container">
                 <form class="form_container" action="https://formspree.io/f/xgebnddl" method="POST">
                     <div class="comment_form">
+                        <label for="textinput" class="label"></label>
                         <input class="textinput" name="name" type="text" placeholder="Full Name" maxlength="30"
                             required />
+                        <label for="textinput" class="label"></label>
                         <input class="textinput" type="email" name="email" placeholder="Email address" required /><br />
+                        <label for="textinput" class="label"></label>
                         <textarea class="textinput_textarea" name="message" id="user-message" cols="10" rows="5"
                             placeholder="Write me something..." maxlength="500" required></textarea>
 
